--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,18 @@
           <artifactId>mysql-connector-java</artifactId>
           <version>5.1.29</version>
       </dependency>
+
+
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.4</version>
+    </dependency>
+
+
   </dependencies>
+
+
 
   <build>
   </build>
